examples/test/testpolicy4805.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4805
  namespace: namespace203
spec:
  podSelector:
    matchLabels:
      key13: value14
      key48: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value16
          key2: value20
      podSelector:
        matchLabels:
          key44: value7
